--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@ng-apimock/protractor-client",
-  "description": "Protractor client for ng-apimock",
+  "name": "@ng-apimock/protractor-plugin",
+  "description": "Protractor plugin for ng-apimock",
   "version": "1.0.0",
-  "homepage": "https://github.com/ng-apimock/protractor-client#readme",
+  "homepage": "https://github.com/ng-apimock/protractor-plugin#readme",
   "author": {
     "name": "Mischa Dasberg",
     "email": "mischa@dasberg.nl"
@@ -16,15 +16,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ng-apimock/protractor-client.git"
+    "url": "git+https://github.com/ng-apimock/protractor-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/ng-apimock/protractor-client/issues"
+    "url": "https://github.com/ng-apimock/protractor-plugin/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/ng-apimock/protractor-client/blob/master/LICENSE-MIT"
+      "url": "https://github.com/ng-apimock/protractor-plugin/blob/master/LICENSE-MIT"
     }
   ],
   "keywords": [
