--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-apimock/protractor-plugin",
   "description": "Protractor plugin for ng-apimock",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://github.com/ng-apimock/protractor-plugin#readme",
   "author": {
     "name": "Mischa Dasberg",
@@ -12,7 +12,8 @@
     "precompile": "rm -rf dist",
     "compile": "tsc",
     "lint": "tslint -p tsconfig.json",
-    "test": "jasmine-ts \"src/**/*.spec.ts\""
+    "test": "jasmine-ts \"src/**/*.spec.ts\"",
+    "protractor-local": "protractor test/protractor.local.conf.js"
   },
   "repository": {
     "type": "git",
@@ -32,13 +33,25 @@
     "ng-apimock",
     "http",
     "api",
-    "protractor"
+    "protractor",
+    "plugin",
+    "angular",
+    "angularjs"
   ],
   "devDependencies": {
+    "@ng-apimock/core": "1.0.2",
+    "@ng-apimock/test-application": "1.0.3",
+    "@types/chai": "4.1.4",
+    "@types/cucumber": "4.0.4",
     "@types/jasmine": "2.8.8",
     "@types/sinon": "5.0.1",
+    "chai": "4.1.2",
+    "connect": "3.6.6",
+    "cucumber": "4.2.1",
     "jasmine-ts": "0.2.1",
     "protractor": "5.3.2",
+    "protractor-cucumber-framework": "6.0.0",
+    "serve-static": "1.13.2",
     "sinon": "6.0.0",
     "tslint": "5.10.0",
     "tslint-eslint-rules": "5.3.1",
