--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "precompile": "rm -rf dist",
     "compile": "tsc",
     "lint": "tslint -p tsconfig.json",
-    "test": "jasmine-ts \"src/**/*.spec.ts\"",
+    "test": "jasmine-ts --config=jasmine.json",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js"
   },
@@ -40,28 +40,30 @@
     "angularjs"
   ],
   "devDependencies": {
-    "@ng-apimock/core": "1.0.4",
-    "@ng-apimock/test-application": "1.0.5",
-    "@types/chai": "4.1.4",
+    "@ng-apimock/core": "1.0.6",
+    "@ng-apimock/test-application": "1.0.6",
+    "@types/chai": "4.1.6",
     "@types/cucumber": "4.0.4",
-    "@types/jasmine": "2.8.8",
-    "@types/sinon": "5.0.2",
-    "chai": "4.1.2",
+    "@types/jasmine": "2.8.9",
+    "@types/sinon": "5.0.5",
+    "chai": "4.2.0",
     "connect": "3.6.6",
-    "cucumber": "4.2.1",
-    "jasmine-ts": "0.2.1",
-    "protractor": "5.4.0",
-    "protractor-cucumber-framework": "6.0.0",
+    "cucumber": "5.0.2",
+    "jasmine": "3.2.0",
+    "jasmine-ts": "0.3.0",
+    "protractor": "5.4.1",
+    "protractor-cucumber-framework": "6.1.1",
     "sauce-connect-launcher": "1.2.4",
     "serve-static": "1.13.2",
-    "sinon": "6.2.0",
+    "sinon": "7.0.0",
+    "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.0.3",
+    "typescript": "3.1.3",
     "vrsource-tslint-rules": "5.8.2"
   },
   "dependencies": {
-    "@ng-apimock/base-client": "1.0.2"
+    "@ng-apimock/base-client": "1.0.3"
   },
   "peerDependencies": {
     "protractor": "5.x"
