--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-apimock/protractor-plugin",
   "description": "Protractor plugin for ng-apimock",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "homepage": "https://github.com/ng-apimock/protractor-plugin#readme",
   "author": {
     "name": "Mischa Dasberg",
@@ -41,6 +41,7 @@
     "angularjs"
   ],
   "devDependencies": {
+    "@ng-apimock/base-client": "1.0.6",
     "@ng-apimock/core": "1.0.11",
     "@ng-apimock/test-application": "1.0.9",
     "@types/chai": "4.1.7",
@@ -65,9 +66,7 @@
     "typescript": "3.1.5",
     "vrsource-tslint-rules": "5.8.2"
   },
-  "dependencies": {
-    "@ng-apimock/base-client": "file:../base-client"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "protractor": "5.x"
   }
