--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-apimock/protractor-plugin",
   "description": "Protractor plugin for ng-apimock",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "homepage": "https://github.com/ng-apimock/protractor-plugin#readme",
   "author": {
     "name": "Mischa Dasberg",
@@ -24,12 +24,7 @@
   "bugs": {
     "url": "https://github.com/ng-apimock/protractor-plugin/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/ng-apimock/protractor-plugin/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "keywords": [
     "apimock",
     "ng-apimock",
@@ -41,32 +36,32 @@
     "angularjs"
   ],
   "devDependencies": {
-    "@ng-apimock/core": "1.0.15",
-    "@ng-apimock/test-application": "1.0.12",
+    "@ng-apimock/core": "1.0.18",
+    "@ng-apimock/test-application": "1.0.13",
     "@types/chai": "4.1.7",
     "@types/cucumber": "4.0.4",
     "@types/fs-extra": "5.0.4",
-    "@types/jasmine": "3.3.0",
-    "@types/sinon": "5.0.6",
+    "@types/jasmine": "3.3.7",
+    "@types/sinon": "7.0.4",
     "chai": "4.2.0",
     "connect": "3.6.6",
-    "cucumber": "5.0.2",
+    "cucumber": "5.1.0",
     "fs-extra": "7.0.1",
-    "jasmine": "3.3.0",
+    "jasmine": "3.3.1",
     "jasmine-ts": "0.3.0",
-    "protractor": "5.4.1",
+    "protractor": "5.4.2",
     "protractor-cucumber-framework": "6.1.1",
     "sauce-connect-launcher": "1.2.4",
     "serve-static": "1.13.2",
-    "sinon": "7.1.1",
-    "ts-node": "7.0.1",
-    "tslint": "5.11.0",
+    "sinon": "7.2.3",
+    "ts-node": "8.0.1",
+    "tslint": "5.12.1",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.1.6",
-    "vrsource-tslint-rules": "5.8.2"
+    "typescript": "3.2.4",
+    "vrsource-tslint-rules": "6.0.0"
   },
   "dependencies": {
-    "@ng-apimock/base-client": "1.0.10"
+    "@ng-apimock/base-client": "1.0.11"
   },
   "peerDependencies": {
     "protractor": "5.x"
