--- a/.npmignore
+++ b/.npmignore
@@ -2,14 +2,17 @@
 src
 
 # test
+test
 **/*.spec.*
 
 # configs
 tsconfig.json
 tslint.json
+jasmine.json
 
 # idea
 .idea
+*.iml
 
 # ci
 .circleci
