--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precompile": "rm -rf dist",
     "compile": "tsc",
     "lint": "tslint -p tsconfig.json",
-    "test": "jasmine-ts --config=jasmine.json",
+    "test": "jest --config=jest.config.js -w 1",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js"
   },
@@ -38,30 +38,30 @@
   "devDependencies": {
     "@ng-apimock/core": "1.0.25",
     "@ng-apimock/test-application": "1.0.17",
-    "@types/chai": "4.2.7",
-    "@types/cucumber": "6.0.0",
-    "@types/fs-extra": "8.0.1",
-    "@types/jasmine": "3.5.1",
-    "@types/sinon": "7.5.1",
+    "@types/chai": "4.2.10",
+    "@types/cucumber": "6.0.1",
+    "@types/fs-extra": "8.1.0",
+    "@types/jest": "25.1.3",
+    "@types/sinon": "7.5.2",
     "chai": "4.2.0",
     "connect": "3.7.0",
     "cucumber": "6.0.5",
     "fs-extra": "8.1.0",
-    "jasmine": "3.5.0",
-    "jasmine-ts": "0.3.0",
+    "jest": "25.1.0",
     "protractor": "6.0.0",
     "protractor-cucumber-framework": "6.2.0",
     "sauce-connect-launcher": "1.3.1",
     "serve-static": "1.14.1",
-    "sinon": "8.1.0",
-    "ts-node": "8.6.2",
-    "tslint": "5.20.1",
+    "sinon": "9.0.0",
+    "ts-jest": "25.2.1",
+    "ts-node": "^8.6.2",
+    "tslint": "6.0.0",
     "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.7.5",
+    "typescript": "3.8.3",
     "vrsource-tslint-rules": "6.0.0"
   },
   "dependencies": {
-    "@ng-apimock/base-client": "1.0.14"
+    "@ng-apimock/base-client": "1.0.15"
   },
   "peerDependencies": {
     "protractor": "5.x"
