--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "precompile": "rm -rf dist",
     "compile": "tsc",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest --config=jest.config.js -w 1",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js"
@@ -36,27 +37,36 @@
     "angularjs"
   ],
   "devDependencies": {
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "9.0.1",
     "@ng-apimock/core": "2.0.1",
     "@ng-apimock/test-application": "1.0.17",
     "@types/chai": "4.2.11",
     "@types/cucumber": "6.0.1",
     "@types/fs-extra": "9.0.1",
     "@types/jest": "26.0.3",
+    "@typescript-eslint/eslint-plugin": "3.3.0",
+    "@typescript-eslint/parser": "3.3.0",
     "chai": "4.2.0",
     "connect": "3.7.0",
     "cucumber": "6.0.5",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jest": "23.13.2",
     "fs-extra": "9.0.1",
+    "husky": "4.2.5",
     "jest": "26.1.0",
+    "jest-matchers": "^20.0.3",
+    "lint-staged": "10.2.11",
     "protractor": "6.0.0",
     "protractor-cucumber-framework": "6.2.1",
+    "rimraf": "3.0.2",
     "sauce-connect-launcher": "1.3.2",
     "serve-static": "1.14.1",
     "ts-jest": "26.1.1",
     "ts-node": "^8.10.2",
-    "tslint": "6.1.2",
-    "tslint-eslint-rules": "5.4.0",
-    "typescript": "3.9.6",
-    "vrsource-tslint-rules": "6.0.0"
+    "typescript": "3.9.6"
   },
   "dependencies": {
     "@ng-apimock/base-client": "1.0.16"
