--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --config=jest.config.js -w 1",
     "protractor-local": "protractor test/protractor.local.conf.js",
-    "protractor-ci": "protractor test/protractor.ci.conf.js"
+    "protractor-ci": "protractor test/protractor.ci.conf.js",
+    "sauce:download": "curl https://saucelabs.com/downloads/sc-4.6.2-linux.tar.gz --output sc-4.6.2-linux.tar.gz",
+    "postsauce:download": "tar -xvf sc-4.6.2-linux.tar.gz",
+    "sauce:start": "cd sc-4.6.2-linux && ./bin/sc",
+    "sauce:started": "wait-on /tmp/sc-started -v"
   },
   "repository": {
     "type": "git",
@@ -47,9 +51,12 @@
     "@types/jest": "26.0.3",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
+    "adm-zip": "^0.4.16",
     "chai": "4.2.0",
     "connect": "3.7.0",
     "cucumber": "6.0.5",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
     "eslint": "7.2.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -66,7 +73,9 @@
     "serve-static": "1.14.1",
     "ts-jest": "26.1.1",
     "ts-node": "^8.10.2",
-    "typescript": "3.9.6"
+    "typescript": "3.9.6",
+    "unzip": "^0.1.11",
+    "wait-on": "^5.0.1"
   },
   "dependencies": {
     "@ng-apimock/base-client": "1.0.16"
