--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-apimock/protractor-plugin",
   "description": "Protractor plugin for ng-apimock",
-  "version": "1.0.18",
+  "version": "2.0.0",
   "homepage": "https://github.com/ng-apimock/protractor-plugin#readme",
   "author": {
     "name": "Mischa Dasberg",
@@ -45,42 +45,43 @@
     "@commitlint/config-conventional": "9.0.1",
     "@ng-apimock/core": "2.0.1",
     "@ng-apimock/test-application": "1.0.17",
-    "@types/chai": "4.2.11",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.0.7",
+    "@semantic-release/npm": "7.0.5",
+    "@semantic-release/release-notes-generator": "9.0.1",
     "@types/cucumber": "6.0.1",
     "@types/fs-extra": "9.0.1",
     "@types/jest": "26.0.3",
-    "@typescript-eslint/eslint-plugin": "3.3.0",
-    "@typescript-eslint/parser": "3.3.0",
-    "adm-zip": "^0.4.16",
-    "chai": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "3.6.0",
+    "@typescript-eslint/parser": "3.6.0",
+    "commitizen": "4.1.2",
     "connect": "3.7.0",
     "cucumber": "6.0.5",
-    "decompress": "^4.2.1",
-    "decompress-targz": "^4.1.1",
-    "eslint": "7.2.0",
+    "eslint": "7.4.0",
     "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.21.2",
-    "eslint-plugin-jest": "23.13.2",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jest": "23.18.0",
     "fs-extra": "9.0.1",
     "husky": "4.2.5",
     "jest": "26.1.0",
-    "jest-matchers": "^20.0.3",
+    "jest-matchers": "20.0.3",
     "lint-staged": "10.2.11",
     "protractor": "6.0.0",
     "protractor-cucumber-framework": "6.2.1",
     "rimraf": "3.0.2",
-    "sauce-connect-launcher": "1.3.2",
+    "semantic-release": "17.1.1",
     "serve-static": "1.14.1",
     "ts-jest": "26.1.1",
-    "ts-node": "^8.10.2",
+    "ts-node": "8.10.2",
     "typescript": "3.9.6",
-    "unzip": "^0.1.11",
-    "wait-on": "^5.0.1"
+    "wait-on": "5.0.1"
   },
   "dependencies": {
     "@ng-apimock/base-client": "1.0.16"
   },
   "peerDependencies": {
-    "protractor": "7.x"
+    "protractor": ">=6.x"
   }
 }
