--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "angularjs"
   ],
   "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-conventional": "9.1.2",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
     "@ng-apimock/core": "2.3.2",
     "@ng-apimock/test-application": "1.0.17",
     "@semantic-release/changelog": "5.0.1",
@@ -53,29 +53,29 @@
     "@semantic-release/release-notes-generator": "9.0.1",
     "@types/cucumber": "6.0.1",
     "@types/fs-extra": "9.0.1",
-    "@types/jest": "26.0.13",
-    "@typescript-eslint/eslint-plugin": "4.1.0",
-    "@typescript-eslint/parser": "4.1.0",
+    "@types/jest": "26.0.14",
+    "@typescript-eslint/eslint-plugin": "4.4.0",
+    "@typescript-eslint/parser": "4.4.0",
     "commitizen": "4.2.1",
     "connect": "3.7.0",
     "cucumber": "6.0.5",
-    "eslint": "7.8.1",
+    "eslint": "7.10.0",
     "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "24.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
     "fs-extra": "9.0.1",
     "husky": "4.3.0",
-    "jest": "26.4.2",
+    "jest": "26.5.2",
     "jest-matchers": "20.0.3",
-    "lint-staged": "10.3.0",
+    "lint-staged": "10.4.0",
     "protractor": "7.0.0",
     "protractor-cucumber-framework": "6.2.1",
     "rimraf": "3.0.2",
-    "semantic-release": "17.1.1",
+    "semantic-release": "17.1.2",
     "serve-static": "1.14.1",
-    "ts-jest": "26.3.0",
+    "ts-jest": "26.4.1",
     "ts-node": "9.0.0",
-    "typescript": "4.0.2",
+    "typescript": "4.0.3",
     "wait-on": "5.2.0"
   },
   "dependencies": {
@@ -83,5 +83,21 @@
   },
   "peerDependencies": {
     "protractor": ">=6.x"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "**/**.{ts}": [
+      "eslint --fix"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
