--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,15 +21,15 @@ jobs:
       - name: install
         run: yarn install --frozen-lockfile
       - name: build
-        run: yarn run build
+        run: yarn compile
       - name: sauce connect proxy download
-        run: yarn run sauce:download
+        run: yarn sauce:download
       - name: sauce connect
-        run: nohup yarn run sauce:start -- --user=${{ secrets.SAUCE_USERNAME }} --api-key=${{ secrets.SAUCE_ACCESS_KEY }} --tunnel-identifier=${{ github.run_id }} --readyfile=/tmp/sc-started &
+        run: nohup yarn sauce:start -- --user=${{ secrets.SAUCE_USERNAME }} --api-key=${{ secrets.SAUCE_ACCESS_KEY }} --tunnel-identifier=${{ github.run_id }} --readyfile=/tmp/sc-started &
       - name: sauce connected check
-        run: yarn run sauce:started
+        run: yarn sauce:started
       - name: integration test
-        run: yarn run protractor-ci
+        run: yarn protractor-ci
         env:
           SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
           SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
