--- a/package.json
+++ b/package.json
@@ -43,46 +43,45 @@
     "angularjs"
   ],
   "devDependencies": {
-    "@commitlint/cli": "12.1.4",
-    "@commitlint/config-conventional": "12.1.4",
-    "@ng-apimock/core": "3.0.1",
-    "@ng-apimock/test-application": "2.0.0",
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@ng-apimock/core": "3.0.3",
+    "@ng-apimock/test-application": "3.0.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/commit-analyzer": "8.0.1",
     "@semantic-release/git": "9.0.0",
     "@semantic-release/github": "7.2.3",
     "@semantic-release/npm": "7.1.3",
-    "@semantic-release/release-notes-generator": "9.0.2",
+    "@semantic-release/release-notes-generator": "9.0.3",
     "@types/cucumber": "6.0.1",
-    "@types/fs-extra": "9.0.11",
-    "@types/jest": "26.0.23",
-    "@typescript-eslint/eslint-plugin": "4.26.0",
-    "@typescript-eslint/parser": "4.26.0",
+    "@types/fs-extra": "9.0.12",
+    "@types/jest": "26.0.24",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
     "commitizen": "4.2.4",
-    "connect": "3.7.0",
     "cucumber": "6.0.5",
-    "eslint": "7.28.0",
+    "eslint": "7.31.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jest": "24.4.0",
+    "express": "4.17.1",
     "fs-extra": "10.0.0",
-    "http-proxy-middleware": "^2.0.0",
-    "husky": "6.0.0",
-    "jest": "27.0.4",
+    "http-proxy-middleware": "^2.0.1",
+    "husky": "7.0.1",
+    "jest": "27.0.6",
     "jest-matchers": "20.0.3",
-    "lint-staged": "11.0.0",
+    "lint-staged": "11.1.1",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "8.1.0",
+    "protractor-cucumber-framework": "8.2.2",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.3",
-    "serve-static": "1.14.1",
-    "ts-jest": "27.0.3",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.2",
-    "wait-on": "5.3.0"
+    "semantic-release": "17.4.4",
+    "ts-jest": "27.0.4",
+    "ts-node": "10.1.0",
+    "typescript": "4.3.5",
+    "wait-on": "6.0.0"
   },
   "dependencies": {
-    "@ng-apimock/base-client": "2.0.2"
+    "@ng-apimock/base-client": "3.1.0"
   },
   "peerDependencies": {
     "protractor": ">=6.x"
