--- a/package.json
+++ b/package.json
@@ -43,41 +43,41 @@
     "angularjs"
   ],
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
-    "@ng-apimock/core": "3.0.3",
+    "@commitlint/cli": "14.1.0",
+    "@commitlint/config-conventional": "14.1.0",
+    "@ng-apimock/core": "3.2.0",
     "@ng-apimock/test-application": "3.1.0",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "7.2.3",
-    "@semantic-release/npm": "7.1.3",
-    "@semantic-release/release-notes-generator": "9.0.3",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/commit-analyzer": "9.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "8.0.1",
+    "@semantic-release/npm": "8.0.2",
+    "@semantic-release/release-notes-generator": "10.0.2",
     "@types/cucumber": "6.0.1",
-    "@types/fs-extra": "9.0.12",
-    "@types/jest": "27.0.1",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
+    "@types/fs-extra": "9.0.13",
+    "@types/jest": "27.0.2",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "commitizen": "4.2.4",
     "cucumber": "6.0.5",
-    "eslint": "7.32.0",
+    "eslint": "8.1.0",
     "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jest": "25.2.2",
     "express": "4.17.1",
     "fs-extra": "10.0.0",
-    "http-proxy-middleware": "^2.0.1",
-    "husky": "7.0.2",
-    "jest": "27.1.0",
+    "http-proxy-middleware": "2.0.1",
+    "husky": "7.0.4",
+    "jest": "27.3.1",
     "jest-matchers": "20.0.3",
-    "lint-staged": "11.1.2",
+    "lint-staged": "11.2.6",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "8.2.4",
+    "protractor-cucumber-framework": "8.2.6",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.7",
-    "ts-jest": "27.0.5",
-    "ts-node": "10.2.1",
-    "typescript": "4.4.2",
+    "semantic-release": "18.0.0",
+    "ts-jest": "27.0.7",
+    "ts-node": "10.4.0",
+    "typescript": "4.4.4",
     "wait-on": "6.0.0"
   },
   "dependencies": {
